Added GUI bounding box; fixed error when calculating intersecting Landsat paths

--- a/colab_notebooks/landsat_C2_ST_v8.ipynb
+++ b/colab_notebooks/landsat_C2_ST_v8.ipynb
@@ -37,11 +37,23 @@
       },
       "source": [
         "**Version 8**<br>\n",
-        "*Last updated: 2022-02-08<p>*\n",
+        "*Last updated: 2022-03-02<p>*\n",
         "christina.herrick@unh.edu<br>\n",
         "steeleb@caryinstitute.org<br>\n",
         "__Please do not distribute__"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Constraints and caveats**\n",
+        "List them here\n",
+        "- path row constraints\n",
+        "- high latitude non-summer"
+      ],
+      "metadata": {
+        "id": "0Hj_-5o-9Fsz"
+      }
     },
     {
       "cell_type": "markdown",
@@ -51,7 +63,7 @@
       "source": [
         "# **Initial Setup**\n",
         "\n",
-        "This notebook uses the [Google Earth Engine](https://developers.google.com/earth-engine) [Python API](https://developers.google.com/earth-engine/guides/python_install) to extract the surface temperature product from Landsat 4, 5, 7, and 8 Collection 2 images for any water body in the world. \n"
+        "This notebook uses the [Google Earth Engine](https://developers.google.com/earth-engine) [Python API](https://developers.google.com/earth-engine/guides/python_install) to extract the surface temperature product from Landsat Collection 2 images for any water body in the world. \n"
       ]
     },
     {
@@ -60,7 +72,7 @@
         "id": "g3zRra91DaEq"
       },
       "source": [
-        "## Modules\n",
+        "## **Modules**\n",
         "\n",
         "This section of code blocks imports necessary python modules for the notebook to run. You will be prompted to click one or more URLs and be taken to a page to sign in with your Google account. This account must already be authorized to use Google Earth Engine. If you do not already have access, [fill out this application](https://signup.earthengine.google.com/#!/).\n",
         "\n",
@@ -74,7 +86,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown __Run this block__ to authorize Colab to authenticate your Google account and give it access to upload files from your local computer ([to be used later](https://colab.research.google.com/drive/1AJFnCB7B7Uev2-0hqIayOb5fkSB0Xn8v#scrollTo=L_Tf54wwIPRy) in the notebook). Once you paste the code, press Enter.\n",
+        "#@markdown __Run this block__ to authorize Colab to authenticate your Google account and give it access to upload files from your local computer. Once you paste the code, press Enter.\n",
         "from google.colab import auth, files\n",
         "auth.authenticate_user()\n",
         "import gspread\n",
@@ -125,6 +137,7 @@
         "import numpy as np\n",
         "import os\n",
         "import re\n",
+        "import subprocess\n",
         "import matplotlib.pyplot as plt\n",
         "from time import strftime, sleep\n",
         "from datetime import datetime, timedelta\n",
@@ -132,6 +145,14 @@
         "import folium\n",
         "from folium import plugins\n",
         "from google.colab import data_table\n",
+        "\n",
+        "try:\n",
+        "  from ipyleaflet import Map, DrawControl\n",
+        "  from ipywidgets import Layout\n",
+        "except ImportError:\n",
+        "  subprocess.check_call([\"python\",\"-m\",\"pip\",\"install\",\"-U\",\"ipyleaflet\"])\n",
+        "  from ipyleaflet import Map, basemaps, basemap_to_tiles, DrawControl\n",
+        "  from ipywidgets import Layout\n",
         "\n",
         "# Add custom basemaps to folium\n",
         "basemaps = {\n",
@@ -324,51 +345,74 @@
       },
       "source": [
         "###Option A: use a bounding box\n",
-        "If you need help finding your coordinates, try using [OpenStreetMap](https://www.openstreetmap.org/export#map=12/43.3826/-72.0157). The bounding box should be as small as possible while still including the entire lake surface.<p>\n",
-        "Enter coordinates to see a map of the bounding box. You can also click on the map to get interactive pop-ups of the latitude (y) and longitude (x), and replace/re-run the coordinates."
+        "Use the Rectangle tool on the map to draw a bounding box. The bounding box should be as small as possible while still including the entire lake surface. It cannot be a centroid location.<p>Do not run this block if you are using Option B."
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@markdown Run this block to generate a map and use the Rectangle tool to draw a bounding box. \n",
+        "#@markdown The bounding box should be as small as possible while still including the entire lake surface. It cannot be a centroid location.\n",
+        "#@markdown If more than one box is drawn, the most recently drawn box will be used.\n",
+        "#@markdown <p>Do not run this block if you are using Option B.\n",
+        "\n",
+        "from ipyleaflet import SearchControl, Marker, AwesomeIcon\n",
+        "\n",
+        "'''pure leaflet'''\n",
+        "# baseMap = basemap_to_tiles(basemaps.CartoDB.DarkMatter)\n",
+        "m = Map(center=(15,0), zoom=2, scroll_wheel_zoom=True, layout=Layout(width='80%', height='500px'))\n",
+        "\n",
+        "draw_control = DrawControl(rectangle={\"shapeOptions\":{\"fillColor\":\"#3fca45d\", \"color\":\"#efed69\", \"fillOpacity\": 0.25}}, circle={}, circlemarker={}, polygon={}, polyline={})\n",
+        "search_control = SearchControl(position=\"topright\", url='https://nominatim.openstreetmap.org/search?format=json&q={s}', zoom=7)\n",
+        "\n",
+        "gj = []\n",
+        "def handle_draw(self, action, geo_json):\n",
+        "  if action in ['created','edited']:\n",
+        "    gj.append(geo_json)\n",
+        "    box = ee.Geometry.Polygon(gj[-1][\"geometry\"][\"coordinates\"],None, False, 100)\n",
+        "    rec_geojson = gj[-1][\"geometry\"][\"coordinates\"]\n",
+        "    lon1, lat1 = rec_geojson[0][0]\n",
+        "    lon2, lat2 = rec_geojson[0][2]\n",
+        "\n",
+        "draw_control.on_draw(handle_draw)\n",
+        "m.add_control(draw_control)\n",
+        "m.add_control(search_control)\n",
+        "m\n"
+      ],
       "metadata": {
-        "id": "eQX8qmNz_aLM",
+        "id": "P7-dEgc0A9_0",
         "cellView": "form"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "#@markdown __Run this block__ after inputting your coordinates below. Note that your coordinates must extend beyond the extent of the lake and can not be a centroid location.\n",
-        "#@markdown Do not run this block if you are using Option B\n",
-        "\n",
-        "#@markdown `lat1` = North\n",
-        "lat1 = '39.50299042429256'  #@param {type:\"string\"}\n",
-        "#@markdown `lat2` = South\n",
-        "lat2 = '39.46165297789037'  #@param {type:\"string\"}\n",
-        "#@markdown `lon1` = West\n",
-        "lon1 = '-105.13274136199448'  #@param {type:\"string\"}\n",
-        "#@markdown `lon2` = East\n",
-        "lon2 = '-105.05034390105698'  #@param {type:\"string\"}\n",
-        "\n",
+        "#@markdown Run this block to get your bounding box coordinates\n",
         "use_user_input_file = \"no\"\n",
         "try:\n",
-        "  lat1 = float(lat1)\n",
-        "  lon1 = float(lon1)\n",
-        "  lat2 = float(lat2)\n",
-        "  lon2 = float(lon2)\n",
-        "except ValueError as e:\n",
-        "  raise ValueError(\"Coordinates are missing or are not numbers\")\n",
-        "box = ee.Geometry.Polygon(\n",
-        "    [[[lon1, lat1], # ur\n",
-        "      [lon2, lat1], # ul\n",
-        "      [lon2, lat2], # ll\n",
-        "      [lon1, lat2]]], None, False) # lr\n",
-        "center_lat = (lat1+lat2)/2\n",
-        "center_lon = (lon1+lon2)/2\n",
-        "locs_fig = folium.Figure(width=\"40%\")\n",
-        "locs_map = folium.Map(location=[center_lat,center_lon],zoom_start=10).add_to(locs_fig)\n",
-        "locs_map.add_child(folium.LatLngPopup())\n",
-        "basemaps['Google Maps'].add_to(locs_map)\n",
-        "locs_map.add_ee_layer(box,{},'aoi')\n",
-        "display(locs_map)"
+        "  box = ee.Geometry.Polygon(gj[-1][\"geometry\"][\"coordinates\"],None, False, 100)\n",
+        "  rec_geojson = gj[-1][\"geometry\"][\"coordinates\"]\n",
+        "  lon1, lat1 = rec_geojson[0][0]\n",
+        "  lon2, lat2 = rec_geojson[0][2]\n",
+        "\n",
+        "  center_lat = (lat1+lat2)/2\n",
+        "  center_lon = (lon1+lon2)/2\n",
+        "\n",
+        "  print(f'''\n",
+        "  north bounds: {lat1}\n",
+        "  south bounds: {lat2}\n",
+        "  west bounds: {lon1}\n",
+        "  east bounds: {lon2}\n",
+        "  ''')\n",
+        "except IndexError:\n",
+        "  print(\"An error occurred, usually because this block was run but no box was drawn on the above map\")"
       ],
+      "metadata": {
+        "cellView": "form",
+        "id": "CX2G1Rtn_RNe"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -397,7 +441,9 @@
         "#@markdown Remember to __run this block__ after filling in the above fields.\n",
         "#@markdown Do not run this block if you are using Option A.\n",
         "\n",
-        "if len(user_input_file)>1:\n",
+        "if use_user_input_file==\"no\":\n",
+        "  print(\"If you intend to use Option B, change the 'use_user_input_file' variable to 'yes' and rerun\")\n",
+        "elif len(user_input_file)>1:\n",
         "  shp = ee.FeatureCollection(user_input_file).geometry()\n",
         "  centroid = shp.centroid(10).getInfo()[\"coordinates\"]\n",
         "  center_lat = centroid[1]\n",
@@ -406,6 +452,7 @@
         "  print(center_lon)\n",
         "else:\n",
         "  print(\"No file input; will use Opt A bounding box coordinates\")\n",
+        "  use_user_input_file = \"no\"\n",
         "\n",
         "if 'shp' in globals() or 'shp' in locals():\n",
         "  shp_map = folium.Map(location=[center_lat,center_lon],zoom_start=10,width=600,height=600)\n",
@@ -441,7 +488,7 @@
         "#@markdown Replace your lake name where the following prompts read 'LAKENAME'. These folders\n",
         "#@markdown will be automatically created within this script.\n",
         "\n",
-        "lake_name = 'LAKENAME' #@param {type:\"string\"}\n",
+        "lake_name = 'greatsaltlake' #@param {type:\"string\"}\n",
         "output_dir = \"/content/drive/MyDrive/lakeCoSTR_output/\"+ lake_name\n",
         "\n",
         "#this parses the 'output_dir' string to get last listed subfolder\n",
@@ -480,11 +527,13 @@
         "\n",
         "#@markdown <p>More information on this dataset can be found at https://doi.org/10.1038/nature20584\n",
         "\n",
+        "\n",
+        "\n",
         "pctTime = 55  #@param {type: \"number\"}\n",
         "#@markdown __Run this block__ after inputting the above parameter\n",
         "\n",
         "water_fig = folium.Figure(width=\"60%\")\n",
-        "water_map = folium.Map(location=[center_lat,center_lon],zoom_start=12,tiles=None).add_to(water_fig)\n",
+        "water_map = folium.Map(location=[center_lat,center_lon],zoom_start=10,tiles=None).add_to(water_fig)\n",
         "water_map.add_child(folium.LatLngPopup())\n",
         "\n",
         "# blues = [\"f7fbff\",\"deebf7\",\"c6dbef\",\"9ecae1\",\"6baed6\",\"4292c6\",\"2171b5\",\"08519c\",\"08306b\"]\n",
@@ -681,7 +730,7 @@
         "except IndexError:\n",
         "  containedMatches = []\n",
         "\n",
-        "intersectedMatches = anyIntersects.getInfo()[\"features\"][0][\"properties\"][\"matches\"]\n",
+        "intersectedMatches = anyIntersects.getInfo()[\"features\"][0][\"properties\"][\"matches\"]#[\"geometry\"]\n",
         "\n",
         "\n",
         "#########################\n",
@@ -694,12 +743,12 @@
         "\n",
         "def addFPtoMap(list_of_fps):\n",
         "  for fp in list_of_fps:\n",
-        "    geojson = folium.GeoJson(fp)\n",
+        "    makeGeojson = folium.GeoJson(fp[\"geometry\"])\n",
         "    fpPath = str(fp[\"properties\"][\"PATH\"])\n",
         "    fpRow = str(fp[\"properties\"][\"ROW\"])\n",
         "    popup = folium.Popup(\"P\"+fpPath+\" R\"+fpRow)\n",
-        "    popup.add_to(geojson)\n",
-        "    geojson.add_to(pixel_map)\n",
+        "    popup.add_to(makeGeojson)\n",
+        "    makeGeojson.add_to(pixel_map)\n",
         "\n",
         "if len(containedMatches)>0:\n",
         "  addFPtoMap(containedMatches)\n",
@@ -709,8 +758,7 @@
         "  Make these changes in the next block below.\n",
         "  ''')\n",
         "else:\n",
-        "  intersectedMatches = anyIntersects.getInfo()[\"features\"][0][\"properties\"][\"matches\"]\n",
-        "  addFPtoMap(intersectedMatches)\n",
+        "  addFPtoMap([intersectedMatches])\n",
         "  print('''\n",
         "  There isn't one fooprint that completely contains your lake. All overlapping scenes \n",
         "  are on the map below (in black). The footprint with the most overlap is highlighted \n",
@@ -1141,7 +1189,7 @@
         "id": "1zhMxo32fmnT"
       },
       "source": [
-        "# **Pair Landsat with *in-situ* data**\n",
+        "# **Pair Landsat with *insitu* data**\n",
         "This next section is optional, but allows you to compare any field data you may have to the Landsat data produced here. This section uses the CSV exported above.<p>\n",
         "In order for this to run successfully, your data must be in CSV format and have the following headers/columns:\n",
         "\n",
