Minor edits; added numbered outline

--- a/colab_notebooks/landsat_C2_ST_v8.ipynb
+++ b/colab_notebooks/landsat_C2_ST_v8.ipynb
@@ -48,7 +48,8 @@
       "source": [
         "# **Constraints and caveats**\n",
         "List them here\n",
-        "- path row constraints\n",
+        "- multiple rows on same path\n",
+        "- lake not fully contained in at least one scene\n",
         "- high latitude non-summer"
       ],
       "metadata": {
@@ -61,7 +62,7 @@
         "id": "psnrRlTjBj2M"
       },
       "source": [
-        "# **Initial Setup**\n",
+        "# **1. Initial Setup**\n",
         "\n",
         "This notebook uses the [Google Earth Engine](https://developers.google.com/earth-engine) [Python API](https://developers.google.com/earth-engine/guides/python_install) to extract the surface temperature product from Landsat Collection 2 images for any water body in the world. \n"
       ]
@@ -72,9 +73,9 @@
         "id": "g3zRra91DaEq"
       },
       "source": [
-        "## **Modules**\n",
+        "## **1.1 Modules**\n",
         "\n",
-        "This section of code blocks imports necessary python modules for the notebook to run. You will be prompted to click one or more URLs and be taken to a page to sign in with your Google account. This account must already be authorized to use Google Earth Engine. If you do not already have access, [fill out this application](https://signup.earthengine.google.com/#!/).\n",
+        "This section of code blocks imports necessary python modules for the notebook to run. You will be prompted to click one or more URLs and be taken to a page to sign in with your Google account.\n",
         "\n",
         "Copy the unique code(s) provided on the web page when prompted and paste where prompted to finish authorization."
       ]
@@ -103,6 +104,8 @@
       },
       "source": [
         "#@markdown __Run this block__ to connect Colab to your Earth Engine account\n",
+        "#@markdown You must already be authorized to use Google Earth Engine. \n",
+        "#@markdown <p>If you do not already have access, <a href=\"https://signup.earthengine.google.com/#!/\" target=\"_blank\">fill out this application</a>.\n",
         "import ee\n",
         "ee.Authenticate()\n",
         "ee.Initialize()"
@@ -255,7 +258,7 @@
         "id": "1C4zmuTIA8SR"
       },
       "source": [
-        "## Imported variables\n",
+        "## **1.2 Imported variables**\n",
         "These are Landsat-specific variable settings for GEE."
       ]
     },
@@ -333,7 +336,7 @@
         "id": "rxgpEciUBKLy"
       },
       "source": [
-        "## Define the lake area\n",
+        "## **1.3 Define the lake area**\n",
         "\n",
         "In this section, use either *Option A*, where you define the bounding box, or *Option B* where you import a shape file of your lake. \n"
       ]
@@ -389,7 +392,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown Run this block to get your bounding box coordinates\n",
+        "#@markdown Run this block to set up your bounding box coordinates.\n",
         "use_user_input_file = \"no\"\n",
         "try:\n",
         "  box = ee.Geometry.Polygon(gj[-1][\"geometry\"][\"coordinates\"],None, False, 100)\n",
@@ -472,7 +475,7 @@
         "id": "bDrkGq_jwgIo"
       },
       "source": [
-        "## Set remaining user variables\n",
+        "## **1.4 Set remaining user variables**\n",
         "\n",
         "This section defines acceptable water persistence and error for the Landsat pixels, the time period of interest, and confirms the path and row for Landsat acquisition. You can also change the default Google Drive folder for any outputs."
       ]
@@ -600,7 +603,7 @@
         "id": "1xE7MPgvY78u"
       },
       "source": [
-        "# **Find water pixels & delineate boundary**\n",
+        "# **2. Find water pixels & delineate boundary**\n",
         "This step uses the bounding box or the table file as well as the water persistence using [JRC Water dataset](https://global-surface-water.appspot.com/) to define the waterbody area. \n",
         "\n",
         "Note, in some cases the _Opt A_ bounding box method will include upstream and downstream water areas, particularily where there are rivers that are large enough to be detected by Landsat. To avoid this, use the _Opt B_ table file method. <p>\n",
@@ -730,7 +733,7 @@
         "except IndexError:\n",
         "  containedMatches = []\n",
         "\n",
-        "intersectedMatches = anyIntersects.getInfo()[\"features\"][0][\"properties\"][\"matches\"]#[\"geometry\"]\n",
+        "intersectedMatches = anyIntersects.getInfo()[\"features\"][0][\"properties\"][\"matches\"]\n",
         "\n",
         "\n",
         "#########################\n",
@@ -822,8 +825,7 @@
         "id": "45tElCUuotvD"
       },
       "source": [
-        "# **Get Skin Surface Temperatures**\n",
-        "**Run this block** to filter by date and site location, convert temperature from K --> C, stack images, and carry over the metadata and system. For landsat 8, remove any scenes with possible image quality issues due to Scene Select Mirror (SSM) position."
+        "# **3. Get Skin Surface Temperatures**"
       ]
     },
     {
@@ -833,8 +835,12 @@
         "cellView": "form"
       },
       "source": [
-        "# @markdown Filter by solar zenith angle? This can be useful in high-latitude areas\n",
-        "filter_sza = \"yes\" #@param [\"yes\",\"no\"] {allow-input: false}\n",
+        "\n",
+        "#@markdown **Run this block** to filter by date and site location, convert \n",
+        "#@markdown temperature from K --> C, compile and stack images, and carry over the metadata. \n",
+        "\n",
+        "#For landsat 8, any scenes with possible image quality \n",
+        "#issues due to Scene Select Mirror (SSM) position are removed.\n",
         "\n",
         "l4 = (l4t1.merge(l4t2).filterMetadata('L1_PROCESSING_LEVEL','equals','L1TP') \\\n",
         "      .filterMetadata('GEOMETRIC_RMSE_MODEL','not_greater_than',rmse) \\\n",
@@ -873,10 +879,7 @@
         "      .filterMetadata('TIRS_SSM_POSITION_STATUS','not_equals','SWITCHED') \\\n",
         "      .map(prep8bands, True))\n",
         "\n",
-        "if filter_sza==\"yes\":\n",
-        "  landsat = ee.ImageCollection(l4).merge(l5).merge(l7).merge(l8).filterMetadata('SOLAR_ZENITH_ANGLE','less_than',77)\n",
-        "else:\n",
-        "  landsat = ee.ImageCollection(l4).merge(l5).merge(l7).merge(l8)\n",
+        "landsat = ee.ImageCollection(l4).merge(l5).merge(l7).merge(l8)\n",
         "\n",
         "print(\"Landsat compiled at\", strftime(\"%x %X\"))\n",
         "\n",
@@ -907,7 +910,7 @@
         "id": "4FleAQ6cyfch"
       },
       "source": [
-        "# **Data Visualization**\n",
+        "# **4. Data Visualization**\n",
         "The code blocks in the following section allow you to explore your results using dataframes and pixel-value distributions. You can visually inspect each scene for errant data or export the data to explore further."
       ]
     },
@@ -918,7 +921,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Convert data from server-side EE objects to client-side Python objects\n",
+        "#@title 4.1 Convert data from server-side EE objects to client-side Python objects\n",
         "#@markdown __Run this block__ to define functions for data exploration\n",
         "\n",
         "\n",
@@ -1002,7 +1005,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title View and export collated pixel distributions\n",
+        "#@title 4.2 View and export collated pixel distributions\n",
         "#@markdown __Run this block__ to iterate through the image collection and convert \n",
         "#@markdown all bins and frequencies to a single Pandas `DataFrame`. \n",
         "#@markdown This returns *bins* (in deg C) in the first column, the image date as \n",
@@ -1053,7 +1056,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title View pixel distribution using `matplotlib`\n",
+        "#@title 4.3 View pixel distribution using `matplotlib`\n",
         "#@markdown __Run this block__ to generate histograms for each lake temperature \n",
         "#@markdown Landsat scene. Each scene is saved as png in a folder 'histograms' in your specified output directory. \n",
         "#@markdown This step can also take some time to run.\n",
@@ -1100,13 +1103,14 @@
         "id": "l1sYNsf_ndyG"
       },
       "source": [
-        "#Export to CSV"
+        "# **5. Export to CSV**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t9STTRpLaRnD"
+        "id": "t9STTRpLaRnD",
+        "cellView": "form"
       },
       "source": [
         "#@markdown Execute this cell block to export a CSV containing temperature and related image metadata to your Google Drive.\n",
@@ -1142,15 +1146,15 @@
         "      \"maxPixels\": 5e9\n",
         "  })\n",
         "  \n",
-        "  more_stats = ee.Dictionary({'pixel_count':count,\n",
-        "                            'landsat_time':landsattime,\n",
-        "                            'cloud_cover':cloudcover,\n",
-        "                            'elev':elev,\n",
-        "                            'azimuth':azi,\n",
-        "                            'esd':esd,\n",
-        "                            'sza':sza,\n",
-        "                            'pct_lake':pctAvail,\n",
-        "                            'l_exceltime':ee.Number(landsattime).divide(1000.0).divide(86400).add(25569)\n",
+        "  more_stats = ee.Dictionary({'availablePixels_count':count,\n",
+        "                            'datetime_landsat':landsattime,\n",
+        "                            'cloudCover_pct':cloudcover,\n",
+        "                            #'elev':elev,\n",
+        "                            #'azimuth':azi,\n",
+        "                            #'esd':esd,\n",
+        "                            #'sza':sza,\n",
+        "                            'lakeCoverage_pct':pctAvail,\n",
+        "                            'datetime_landsat_excelformat':ee.Number(landsattime).divide(1000.0).divide(86400).add(25569)\n",
         "                            })\n",
         "  stats2 = ee.Dictionary.combine(stats, more_stats)\n",
         "\n",
@@ -1189,7 +1193,7 @@
         "id": "1zhMxo32fmnT"
       },
       "source": [
-        "# **Pair Landsat with *insitu* data**\n",
+        "# **6. Pair Landsat with *insitu* data**\n",
         "This next section is optional, but allows you to compare any field data you may have to the Landsat data produced here. This section uses the CSV exported above.<p>\n",
         "In order for this to run successfully, your data must be in CSV format and have the following headers/columns:\n",
         "\n",
@@ -1208,7 +1212,7 @@
         "id": "APg3jpUagGTf"
       },
       "source": [
-        "## Upload CSV of *insitu* data\n",
+        "## 6.1 Upload CSV of *insitu* data\n",
         "Choose an option below. For more ways to import data, see [here](https://colab.research.google.com/notebooks/io.ipynb)  "
       ]
     },
@@ -1303,7 +1307,7 @@
         "id": "JnJU34MEO1c-"
       },
       "source": [
-        "## Pair *insitu* data with Landsat data"
+        "## 6.2 Pair *insitu* data with Landsat data"
       ]
     },
     {
