updates to lakeCoSTR tool
Update language in path-row section; fix bug in insitu matching due to column renaming

--- a/colab_notebooks/landsat_C2_ST_v9.ipynb
+++ b/colab_notebooks/landsat_C2_ST_v9.ipynb
@@ -3,12 +3,12 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "landsat_C2_ST_v8.ipynb",
+      "name": "landsat_C2_ST_v9.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "DBZzaGgqpr8W"
       ],
-      "toc_visible": true,
+      "history_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/steeleb/ids-ne-lakes/blob/master/colab_notebooks/landsat_C2_ST_v9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/steeleb/ids-ne-lakes/blob/master/landsat_C2_ST_v9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,8 +36,8 @@
         "id": "tr9ipVEDv7BK"
       },
       "source": [
-        "**Version 8**<br>\n",
-        "*Last updated: 2022-03-02<p>*\n",
+        "**Version 9**<br>\n",
+        "*Last updated: 2022-03-25<p>*\n",
         "christina.herrick@unh.edu<br>\n",
         "steeleb@caryinstitute.org<br>\n",
         "__Please do not distribute__"
@@ -491,7 +491,7 @@
         "#@markdown Replace your lake name where the following prompts read 'LAKENAME'. These folders\n",
         "#@markdown will be automatically created within this script.\n",
         "\n",
-        "lake_name = 'greatsaltlake' #@param {type:\"string\"}\n",
+        "lake_name = '' #@param {type:\"string\"}\n",
         "output_dir = \"/content/drive/MyDrive/lakeCoSTR_output/\"+ lake_name\n",
         "\n",
         "#this parses the 'output_dir' string to get last listed subfolder\n",
@@ -579,18 +579,18 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown Landsat records begin in 1984 with Landsat 4 TM. \n",
+        "#@markdown Landsat thermal band records begin in 1982 with Landsat 4 Thematic Mapper (TM). \n",
         "#@markdown Enter the year range that you want to search, as well as months of \n",
         "#@markdown the year. To search all months, `m1 = 1` and `m2 = 12` <p>\n",
         "#@markdown <p>First year (y1) and last year (y2). Years are inclusive, minimum value is 1982. <p>\n",
         "#@markdown <p>First month (m1) and last month (m2). Months are inclusive.<p>\n",
-        "#@markdown <p>Note that this method has only been developed for temperature estimation where there is no ice present on the lake. \n",
+        "#@markdown <p>Note that this method has only been tested for temperature estimation where there is no ice present on the lake. \n",
         "\n",
-        "y1 = 2018 #@param {type: \"number\"}\n",
+        "y1 = 1982 #@param {type: \"number\"}\n",
         "y2 = 2020 #@param {type: \"number\"}\n",
         "\n",
-        "m1 = 5 #@param {type: \"number\"}\n",
-        "m2 =  11#@param {type: \"number\"}\n",
+        "m1 = 05 #@param {type: \"number\"}\n",
+        "m2 = 11 #@param {type: \"number\"}\n",
         "print('Script will search years %d through %d and months %d through %d of each year' % (y1,y2,m1,m2))\n",
         "#@markdown __Run this block__ after inputting the above parameters"
       ],
@@ -622,6 +622,9 @@
         "pctLakeCoverage = 25 #@param {type: \"number\"}\n",
         "#@markdown __Run this block__ after inputting the above parameter\n",
         "\n",
+        "#@markdown If you recieve an error `EEException: User memory limit exceeded.`, you have selected a waterbody that is too large to process in lakeCoSTR.\n",
+        "\n",
+        "\n",
         "if use_user_input_file==\"yes\":\n",
         "  try:\n",
         "    box = shp\n",
@@ -645,7 +648,7 @@
         "    scale=30,\n",
         "    maxPixels=5e9,\n",
         "    geometryInNativeProjection=False,\n",
-        "    labelProperty='surfaceWater').map(addArea).sort('area',False);\n",
+        "    labelProperty='surfaceWater').map(addArea).sort('area', False);\n",
         "\n",
         "lake_outline = ee.Feature(regions.first())\n",
         "geo = lake_outline.geometry()\n",
@@ -720,7 +723,7 @@
         "## the most overlap\n",
         "\n",
         "footprintJoinAll = ee.Join.saveAll('matches')\n",
-        "footprintJoinBest = ee.Join.saveBest(**{'matchKey':'matches','measureKey':'best'})\n",
+        "footprintJoinBest = ee.Join.saveBest(**{'matchKey':'matches','measureKey':'area'})\n",
         "\n",
         "footprintContains = ee.Filter.isContained(**{'rightField':'.geo','leftField':'.geo'})\n",
         "footprintIntersects = ee.Filter.intersects(**{'rightField':'.geo','leftField':'.geo'})\n",
@@ -753,22 +756,38 @@
         "    popup.add_to(makeGeojson)\n",
         "    makeGeojson.add_to(pixel_map)\n",
         "\n",
-        "if len(containedMatches)>0:\n",
-        "  addFPtoMap(containedMatches)\n",
-        "  print('''You have one or more footprints that completely contain your lake (blue outline).\n",
-        "  If footprints are on the same path, it is recommended to only choose one \n",
-        "  footprint per path. If footprints are on the same row, use all footprints on the row.\n",
-        "  Make these changes in the next block below.\n",
-        "  ''')\n",
-        "else:\n",
-        "  addFPtoMap([intersectedMatches])\n",
+        "if len(containedMatches)>0: #lake is fully contained by at least 1 path-row\n",
+        "  if len(intersectedMatches) == 0: #and the lake doesn't have any partial matches\n",
+        "    addFPtoMap(containedMatches)\n",
+        "    if(row_north-row_south) == 0: #if it is contained by only one row\n",
+        "      print('''Great news! Your lake is completely contained by at least one path-row footprint.\n",
+        "      Because your lake does not cross multiple WRS2 rows, there's nothing more you need to do.\n",
+        "      You can skip the next codeblock and move to the 'Get Skin Surface Temperatures' section.\n",
+        "      ''')\n",
+        "    else: #if it is contained by multiple rows\n",
+        "      print('''Great news! Your lake is completely contained by multiple WRS2 path-row footprints, \n",
+        "      HOWEVER, those footprints include multiple WRS2 rows in the same WRS2 path. In order to not retreive near-duplicate \n",
+        "      temperature estimates from neghboring WRS2 rows, please *manually input* a single ROW value for `new_row_north` and \n",
+        "      `new_row_south` in the codeblock below. We reccommend you choose the row that is closest to the equator (a lower row number in the Northern \n",
+        "      Hemisphere, or a higher row number in the Southern Hemisphere).\n",
+        "      ''')\n",
+        "      print(\"Click the blue highlighted footprint to see the path and row\")\n",
+        "  elif len(intersectedMatches)>0: #if it has partial matches\n",
+        "    if len(containedMatches) >0: #and it has fully contained matches\n",
+        "      addFPtoMap(containedMatches)\n",
+        "      print('''Great news! Your lake is completely contained by at least one path-row footprint, \n",
+        "      HOWEVER, you need to *manually input* the path and row values for the blue box(es) displayed \n",
+        "      in the map below into the next code block because the overlapping path-row combinations \n",
+        "      outlined in black do/does not completely contain your lake.\n",
+        "      ''')\n",
+        "      print(\"Click the blue highlighted footprint to see the path and row\")\n",
+        "else: #otherwise, you're outta luck\n",
         "  print('''\n",
-        "  There isn't one fooprint that completely contains your lake. All overlapping scenes \n",
-        "  are on the map below (in black). The footprint with the most overlap is highlighted \n",
-        "  on the map (in blue). Use the code block below to adjust your path/row footprints.\n",
+        "  CAUTION: Your lake is not completely contained by a single WRS2 path-row footprint. lakeCoSTR functions best\n",
+        "  when your lake is completely contained by at least one WRS2 path-row footprint. Because of this, we do not \n",
+        "  recommend the use of lakeCoSTR to acquire surface temperature estimates for your lake. \n",
         "  ''')\n",
         "\n",
-        "print(\"Click the blue highlighted footprint to see the path/row\")\n",
         "pixel_map.add_ee_layer(lake_outline.geometry(), {}, 'lake area')\n",
         "display(pixel_map)\n"
       ],
@@ -778,12 +797,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown Currently, this script will use the bounding paths \n",
-        "#@markdown reported above. We suggest adjusting these path/row bounds if \n",
-        "#@markdown your lake crosses into 2 footprints in the same path (eg travels north or south \n",
-        "#@markdown into the next footprint), or if your lake isn't completely contained \n",
-        "#@markdown within a footprint.<br>\n",
-        "#@markdown <br>If you don't need to change your parameters, leave them blank or marked as `None`.\n",
+        "#@markdown If ther previous code block directed you to `*manually input*` WRS2 path-row values, \n",
+        "#@markdown please enter the values for path ('P') and row ('R') as indicated by clicking on the\n",
+        "#@markdown blue box in the map above. \n",
+        "\n",
+        "#@markdown <br>If you weren't directed to change your the WRS2 path-row parameters, leave these blank.\n",
         "\n",
         "new_path_west = \"\" #@param {type:'string'}\n",
         "new_path_east = \"\" #@param {type: 'string'}\n",
@@ -1225,7 +1243,7 @@
       "source": [
         "#@title Please provide some information about your data\n",
         "#@markdown What timezone is your data? <a href=\"https://en.wikipedia.org/wiki/List_of_tz_database_time_zones\" target=\"_blank\">Olson Times Wikipedia Page</a> Specifically, you need to indicate the UTC offset for your data for proper pairing, including whether or not your data timestamp observes Daylight Savings Time. Enter the text for the matching UTC offset and DST behavior from the 'TZ database name' column in the linked table. Note that the sign of the GMT offset is intentionally inverted from the UTC offset.\n",
-        "insitu_timezone = \"Etc/GMT+5\" #@param {type:\"string\"}\n",
+        "insitu_timezone = \"\" #@param {type:\"string\"}\n",
         "#@markdown How is your datetime formatted? Please use <a href='https://strftime.org/' target='_blank'>strftime</a> format.\n",
         "datetime_format = \"%Y-%m-%d %H:%M:%S\" #@param {type:\"string\"}"
       ],
@@ -1240,7 +1258,7 @@
       },
       "source": [
         "#@title Option 1: Link to raw CSV from Github\n",
-        "pasted_path = \"https://raw.githubusercontent.com/cherrickunh/ids-ne-lakes/master/data/archive/all_temp_data_v2021May14.csv?token=AC6S5HCH7JBBA5H6XIHI2W3BQPMWO\" #@param {type:\"string\"}\n",
+        "pasted_path = \"\" #@param {type:\"string\"}\n",
         "\n",
         "is_df = pd.read_csv(pasted_path)\n",
         "#is_df[\"datetime\"] = pd.to_datetime(is_df[\"datetime\"])\n",
@@ -1293,7 +1311,7 @@
         "cellView": "form"
       },
       "source": [
-        "pasted_path = \"/content/insitu_temp_data_v2021-10-20.csv\" #@param {type:\"string\"}\n",
+        "pasted_path = \"\" #@param {type:\"string\"}\n",
         "\n",
         "is_df = pd.read_csv(pasted_path)\n",
         "print(\"dataframe created\")"
@@ -1366,6 +1384,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "M1JcWlMREbK7"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XYfj7ThEZsFl",
@@ -1397,7 +1424,7 @@
         "def conv_lstime(i):\n",
         "  return pd.Timestamp(i, unit = 'ms', tz = 'utc')\n",
         "\n",
-        "gee_csv['landsat_time_utc'] = gee_csv.landsat_time.apply(conv_lstime)\n",
+        "gee_csv['landsat_time_utc'] = gee_csv.datetime_landsat.apply(conv_lstime)\n",
         "\n",
         "gee_overlap = gee_csv[gee_csv.landsat_time_utc>insitumin]\n",
         "gee_overlap_fin = gee_overlap[gee_overlap.landsat_time_utc<insitumax]\n",
